--- a/index.ipynb
+++ b/index.ipynb
@@ -575,12 +575,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Terrance Koar\n"
+     ]
+    }
+   ],
    "source": [
     "first_name = \"Dan\"\n",
-    "last_name = \"\"\n",
+    "last_name = \"Guill\"\n",
     "for key, value in example_dictionary.items():\n",
     "    if key == \"last_name\":\n",
     "        last_name = value.title()\n",
